@@ -12,7 +12,7 @@
 
     <ul>
       <li><a href="basic.html">Basic example</a></li>
-      <li><a href="graph-types.html">Different graph types</a></li>
+      <li><a href="graph-types.html">Different graph types</a> and <a href="categories.html">simple categories/textual data</a></li>
       <li><a href="setting-options.html">Setting various options</a> and <a href="annotating.html">annotating a chart</a></li>
       <li><a href="ajax.html">Updating graphs with AJAX</a> and <a href="realtime.html">real-time updates</a></li>
     </ul>
